--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,8 +6,4 @@ mkdocs:
 python:
   version: 3.6
   install:
-    - requirements: docs/requirements.txt
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+    - requirements: requirements.txt
