--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
 - Modules:
   - accept-language: modules/accept-language.md
   - ajp: modules/ajp.md
+  - array-var: modules/array-var.md
   - auth-ldap: modules/auth-ldap.md
   - auth-pam: modules/auth-pam.md
   - aws-auth: modules/aws-auth.md
@@ -34,6 +35,7 @@ nav:
   - dynamic-etag: modules/dynamic-etag.md
   - dynamic-limit-req: modules/dynamic-limit-req.md
   - echo: modules/echo.md
+  - encrypted-session: modules/encrypted-session.md
   - execute: modules/execute.md
   - f4fhds: modules/f4fhds.md
   - fancyindex: modules/fancyindex.md
@@ -46,6 +48,7 @@ nav:
   - headers-more: modules/headers-more.md
   - hmac-secure-link: modules/hmac-secure-link.md
   - html-sanitize: modules/html-sanitize.md
+  - iconv: modules/iconv.md
   - immutable: modules/immutable.md
   - ipscrub: modules/ipscrub.md
   - jpeg: modules/jpeg.md
