--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,7 @@ nav:
   - ipscrub: modules/ipscrub.md
   - jpeg: modules/jpeg.md
   - js-challenge: modules/js-challenge.md
+  - json-var: modules/json-var.md
   - jwt: modules/jwt.md
   - length-hiding: modules/length-hiding.md
   - log-zmq: modules/log-zmq.md
